# forge-lang

./: .gitignore  AUDIT_REPORT.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  TESTING.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  spec.yml
.planning/: 5a1-safe-opcode-dispatch.plan.md  5a2-gc-root-scanning.plan.md  5a3-dap-stdin-reader.plan.md  6a1-len-char-parity.plan.md  6a2-jit-memory-leak.plan.md  6a3-short-circuit-and-or.plan.md  6b1-feature-gate-jit.plan.md  6b2-feature-gate-postgres.plan.md  PHASE_2_4_FORGE_PUBLISH.md  PHASE_3_1_ASYNC_VM.md  PHASE_3_5_SCHEDULE_WATCH_VM.md  PHASE_4_1_VM_DEFAULT.md  PRODUCTION_READINESS.md  ROADMAP.md  allow-run.plan.md  auto-jit-any-type.plan.md  changelog-production-readiness.plan.md  channel-close.plan.md  channel-select.plan.md  closure-deep-clone.plan.md  db-transaction-apis.plan.md  debugger-dap.plan.md  enum-methods.plan.md  exhaustive-match.plan.md  final-verification-report.md  final-verification.plan.md  flow-narrowing.plan.md  forge-add.plan.md  forge-search.plan.md  forge-update.plan.md  fork-for-serving-benchmark.plan.md  generic-resolution.plan.md  generic-structs.plan.md  github-registry.plan.md  http-servers-standalone-binaries.plan.md  interface-satisfaction.plan.md  intern-field-names.plan.md  interned-string-comparison.plan.md  iterator-protocol.plan.md  jit-collections-interpolate.plan.md  (+45 more)
benches/: fork_for_serving.rs
benchmarks/: bench_array.fg  bench_array.py  bench_factorial.fg  bench_factorial.py  bench_fib.fg  bench_fib.go  bench_fib.js  bench_fib.py  bench_fib.rs  bench_loop.fg  bench_loop.py  bench_string.fg  bench_string.py  run_benchmarks.sh
docs/: BOOK_FRONT_MATTER.md  FORGE_BOOK.md  PROGRAMMING_FORGE.md  index.html  part1_foundations.md  part2_stdlib.md  part3_projects.md  part4_internals.md
docs/book/: build.sh  fix-links.lua  template.tex
docs/performance/: startup.md
docs/spec/: 404.html  concurrency.html  error-handling.html  expressions.html  index.html  introduction.html  lexical-structure.html  print.html  searcher-c2a407aa.js  searchindex-7ed87d68.js  statements.html  toc-cb066ca3.js  toc.html  type-system.html  types.html
docs/spec/appendix/: changelog.html  grammar.html  keywords.html  precedence.html
docs/spec/builtins/: assertions.html  collections.html  execution.html  genz.html  objects.html  output.html  shell.html  strings.html  type-functions.html
docs/spec/concurrency/: async.html  await.html  channels.html  spawn.html
docs/spec/dual-syntax/: innovation.html  mapping.html  philosophy.html
docs/spec/error-handling/: check.html  propagation.html  result.html  safe-must.html
docs/spec/expressions/: arithmetic.html  closures.html  comparison.html  field-access.html  match.html  method-calls.html  string-interpolation.html  when-guards.html
docs/spec/internals/: bytecode-vm.html  execution-model.html  http-server.html  interpreter.html  jit.html  memory.html
docs/spec/lexical-structure/: comments.html  identifiers.html  keywords.html  literals.html  operators.html  source-text.html
docs/spec/statements/: assignment.html  control-flow.html  functions.html  jump.html  loops.html  modules.html  variables.html
docs/spec/stdlib/: crypto.html  csv.html  db.html  env.html  exec.html  fs.html  http.html  io.html  (+9 more)
editors/vscode/: README.md  language-configuration.json  package.json
examples/: adt.fg  api.fg  bench_client.fg  bench_server.fg  bench_server_closure.fg  bench_server_concurrent.fg  builtins_demo.fg  data.fg  db_parameterized.fg  devops.fg  enum_methods.fg  fetch_demo.fg  functional.fg  hello.fg  jwt_demo.fg  mysql_demo.fg  natural.fg  result_try.fg  showcase.fg  squad.fg  stdlib.fg  types.fg
rfcs/: 0001-language-vision.md  0002-http-as-primitive.md  0003-dual-syntax.md  0004-errors-as-values.md  0005-compilation-evolution.md  README.md
spec/: book.toml
spec/src/: SUMMARY.md  concurrency.md  error-handling.md  expressions.md  introduction.md  lexical-structure.md  statements.md  type-system.md  types.md
src/: cancellation.rs  chat.rs  doc.rs  errors.rs  formatter.rs  learn.rs  lib.rs  main.rs  manifest.rs  native.rs  package.rs  permissions.rs  publish.rs  registry.rs  scaffold.rs  typechecker.rs  watch.rs
src/dap/: mod.rs
src/interpreter/: builtins.rs  mod.rs  tests.rs
src/lexer/: lexer.rs  token.rs
src/lsp/: mod.rs
src/parser/: ast.rs  parser.rs
src/repl/: mod.rs
src/runtime/: client.rs  embedded.rs  host.rs  metadata.rs  mod.rs  server.rs  tracing_init.rs
src/stdlib/: crypto.rs  csv.rs  db.rs  env.rs  exec_module.rs  fs.rs  http.rs  io.rs  json_module.rs  jwt.rs  log.rs  math.rs  mod.rs  mysql.rs  npc.rs  os_module.rs  path_module.rs  pg.rs  regex_module.rs  term.rs  time.rs  toml_module.rs  url_module.rs  ws.rs
src/testing/: mod.rs  parity.rs
src/vm/: async_tests.rs  builtins.rs  bytecode.rs  compiler.rs  enum_methods_tests.rs  frame.rs  gc.rs  green.rs  jit_tests.rs  machine.rs  map_tests.rs  mod.rs  must_ask_freeze_tests.rs  nanbox.rs  parity_tests.rs  profiler.rs  schedule_watch_tests.rs  serialize.rs  set_tests.rs  squad_tests.rs  stream_tests.rs  tuple_tests.rs  value.rs
test-project/: .gitignore  forge.toml  main.fg
test-project/tests/: basic_test.fg
tests/: basic_test.fg  collections_extended_test.fg  collections_test.fg  concurrency_test.fg  control_flow_test.fg  edge_cases_test.fg  error_handling_test.fg  execution_helpers_test.fg  functional_test.fg  genz_kit_test.fg  hooks_test.fg  innovation_test.fg  innovations_test.fg  interpreter_behavior_test.fg  jwt_test.fg  language_spec_test.fg  mysql_test.fg  natural_syntax_test.fg  npc_test.fg  otel_smoke.rs  safety_correctness_test.fg  safety_test.fg  server_concurrency.rs  stdlib_audit_test.fg  stdlib_extended_test.fg  stdlib_math_fs_test.fg  stdlib_test.fg  strings_extended_test.fg  strings_test.fg  testing_framework_test.fg  types_test.fg  v042_fixes_test.fg
tools/: startup_time.rs
(+219 files in other folders)
