[package]
name = "forge-lang"
version = "0.3.3"
edition = "2021"
rust-version = "1.85"
description = "Forge — Internet-native programming language with natural syntax, bytecode VM, and built-in HTTP/database/crypto"
license = "MIT"
repository = "https://github.com/humancto/forge-lang"
homepage = "https://github.com/humancto/forge-lang"
keywords = ["language", "programming-language", "interpreter", "vm", "scripting"]
categories = ["compilers", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# === Serialization ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# === Async Runtime ===
tokio = { version = "1", features = ["full"] }

# === HTTP Server (production-grade) ===
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# === HTTP Client (production-grade) ===
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# === CLI & REPL ===
clap = { version = "4", features = ["derive"] }
rustyline = { version = "15", features = ["derive"] }

# === Error Reporting ===
ariadne = "0.4"

# === Utilities ===
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
indexmap = "2"
toml = "1"

# === Crypto ===
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
hex = "0.4"

# === Regex ===
regex = "1"

# === Database ===
rusqlite = { version = "0.34", features = ["bundled"] }
tokio-postgres = "0.7"

# === JIT / Native Compilation (Cranelift) ===
cranelift-codegen = "0.129"
cranelift-frontend = "0.129"
cranelift-jit = "0.129"
cranelift-module = "0.129"
cranelift-native = "0.129"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
strip = true
