[package]
name = "forge-lang"
version = "0.8.0"
edition = "2021"
rust-version = "1.85"
description = "Forge — Internet-native programming language with natural syntax, bytecode VM, and built-in HTTP/database/crypto"
license = "MIT"
repository = "https://github.com/humancto/forge-lang"
homepage = "https://github.com/humancto/forge-lang"
keywords = ["language", "programming-language", "interpreter", "vm", "scripting"]
categories = ["compilers", "command-line-utilities"]
readme = "README.md"
exclude = ["docs/book/programming-forge.pdf", "docs/cover.jpeg", "docs/spec/**", "docs/PROGRAMMING_FORGE.md", "docs/part*.md", "benchmarks/**", "spec/**"]

[lib]
name = "forge_lang"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# === Serialization ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# === Async Runtime ===
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "net", "time", "io-util", "signal"] }

# === HTTP Server (production-grade) ===
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
# Used by the server's WS handler for per-connection state. parking_lot's
# Mutex doesn't poison and has no Send-across-await hazard with the way
# we hold it (lock guard never crosses an .await).
parking_lot = "0.12"

# === Observability ===
# tracing is the structured-logging substrate; tower-http's TraceLayer
# (already enabled above) emits per-request spans into it.
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "fmt"] }

# === OpenTelemetry / OTLP (opt-in via `otel` feature) ===
# Pinned to 0.31 stack. The OTel Rust ecosystem has historically had
# breaking releases every 1-2 months; this pin keeps the build stable.
# CI runs `cargo build --features otel` so a future incompatible upgrade
# fails fast.
opentelemetry = { version = "0.31", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# === HTTP Client (production-grade) ===
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }

# === CLI & REPL ===
clap = { version = "4", features = ["derive"] }
rustyline = { version = "15", features = ["derive"] }

# === Error Reporting ===
ariadne = "0.4"

# === Utilities ===
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
indexmap = "2"
toml = "1"

# === Crypto ===
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
getrandom = "0.2"

# === URL Parsing ===
url = "2"

# === WebSocket Client ===
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# === Environment ===
dotenvy = "0.15"

# === Regex ===
regex = "1"

# === Database ===
rusqlite = { version = "0.34", features = ["bundled"] }
tokio-postgres = { version = "0.7", optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "1", optional = true }
mysql_async = { version = "0.34", default-features = false, features = ["rustls-tls"], optional = true }
flate2 = "1"

# === JWT ===
jsonwebtoken = "9"

# === JIT / Native Compilation (Cranelift) ===
cranelift-codegen = { version = "0.129", optional = true }
cranelift-frontend = { version = "0.129", optional = true }
cranelift-jit = { version = "0.129", optional = true }
cranelift-module = { version = "0.129", optional = true }
cranelift-native = { version = "0.129", optional = true }
gethostname = "1.1.0"
semver = "1"
tar = "0.4"

[features]
default = ["jit", "postgres", "mysql"]
jit = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "cranelift-native"]
postgres = ["tokio-postgres", "tokio-postgres-rustls", "rustls", "webpki-roots"]
mysql = ["mysql_async"]
# Opt-in OpenTelemetry/OTLP export. Off by default (~30 transitive crates
# including tonic, prost, hyper, h2). Activate at runtime via
# OTEL_EXPORTER_OTLP_ENDPOINT.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
strip = true
